proyecto terminado y listo para ser entregado

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <main class="container-flex">
+    <main class="container-main-flex">
       <section class="container-flex container-results">
         <h3 class="container-flex">Your Result</h3>
         <article class="container-flex container-circle">
